fix(table): fix long strings in table cells were incorrectly truncated

--- a/src/Table/styles/common.less
+++ b/src/Table/styles/common.less
@@ -171,6 +171,8 @@
     position: absolute;
     white-space: normal;
     background: @table-body-background;
+    display: table;
+    table-layout: fixed;
 
     &.first {
       border-left-width: 0;
